--- a/tests.ipynb
+++ b/tests.ipynb
@@ -11,44 +11,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROBLEM, CODE = \"Hi\", \"Helloworld\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"prompts.json\", \"r\") as file:\n",
+    "with open(\"CodeJudge/prompts.json\", \"r\") as file:\n",
     "    dic = json.loads(file.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'You will be provided with a problem statement, a code snippet that supposedly addresses the problem,\\nand a catalog of code inconsistencies.\\nEvaluation Steps:\\n1. Read the problem statement carefully to identify the functionalities required for the\\nimplementation.\\n2. Read the code snippet and compare it to the problem statement. Check if the code snippet covers\\nthe required functionalities.\\n3. Output your answer in a JSON format list.\\na) If the code snippet is correct, output: [\"inconsistency\": \"None\", \"severity\": \"Negligible\"].\\nb) If the code snippet is incorrect, output the identified inconsistencies and their severity\\naccording to the catalog of code inconsistencies. For example: [\"inconsistency\": \"<inconsistency1>\",\\n\"severity\": \"<severity1>\", \"inconsistency\": \"<inconsistency2>\", \"severity\": \"<severity2>\", ...]\\nProblem: {PROBLEM}\\nCode Snippet: {CODE}\\nTaxonomy of Common Inconsistencies:\\n1. Missing dependency declarations: Negligible\\n2. No error messages for unexpected input cases: Negligible\\n3. Inefficiency, unnecessary statements: Negligible\\n4. Edge case not handled: Small\\n5. Logic error: Major\\n6. Function or variable not defined: Fatal\\n7. Code not completed: Fatal\\nEvaluation Form:\\nJSON output (a JSON list only):'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prompt = dic[\"prompts\"][0][\"prompt\"]"
+    "prompt = dic[\"faultlocalization\"][0][\"prompt\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'PROBLEM'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mprompt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'PROBLEM'"
+     ]
+    }
+   ],
+   "source": [
+    "prompt.format()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\adity\\Desktop\\Thesis\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\adity\\Desktop\\Thesis\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -63,7 +82,7 @@
        "})"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +110,7 @@
        " 'example_test': 'def check(has_close_elements):\\n    assert has_close_elements([1.0, 2.0, 3.0], 0.5) == False\\n    assert has_close_elements([1.0, 2.8, 3.0, 4.0, 5.0, 2.0], 0.3) == True\\ncheck(has_close_elements)\\n'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -176,32 +195,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'inconsistencies': [{'inconsistency': 'Logic error: The code does not handle the case where the list has fewer than two elements, which would make it impossible to have close elements.',\n",
-       "   'severity': 'Major'},\n",
-       "  {'inconsistency': 'Edge case not handled: The function does not account for the case where the input list is empty.',\n",
-       "   'severity': 'Small'}],\n",
-       " 'score': 0.44999999999999996}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'replace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjudge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevaluateBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:69\u001b[0m, in \u001b[0;36mCodeJudge.evaluateBinary\u001b[1;34m(self, problem, code, referenceCode)\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mevaluateBinary\u001b[39m(\u001b[38;5;28mself\u001b[39m, problem:\u001b[38;5;28mstr\u001b[39m, code:\u001b[38;5;28mstr\u001b[39m, referenceCode:\u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m---> 69\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getLLMResponseBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:38\u001b[0m, in \u001b[0;36mCodeJudge._getLLMResponseBinary\u001b[1;34m(self, problem, code)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_getLLMResponseBinary\u001b[39m(\u001b[38;5;28mself\u001b[39m, problem: \u001b[38;5;28mstr\u001b[39m, code: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n\u001b[0;32m     37\u001b[0m     prompts \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loadBinaryEvaluationPrompts()\n\u001b[1;32m---> 38\u001b[0m     stageOnePrompt \u001b[38;5;241m=\u001b[39m \u001b[43mreplaceKeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprompts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPROBLEM\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCODE\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m     stageOneResponse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mllm\u001b[38;5;241m.\u001b[39minvoke(stageOnePrompt)\u001b[38;5;241m.\u001b[39mcontent\n\u001b[0;32m     41\u001b[0m     stageTwoPrompt \u001b[38;5;241m=\u001b[39m replaceKeys(prompts[\u001b[38;5;241m1\u001b[39m], [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMISTAKE\u001b[39m\u001b[38;5;124m\"\u001b[39m], [stageOneResponse])\n",
+      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:12\u001b[0m, in \u001b[0;36mreplaceKeys\u001b[1;34m(inputString, keys, values)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of keys and values should be the same\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(keys)):\n\u001b[1;32m---> 12\u001b[0m     inputString \u001b[38;5;241m=\u001b[39m \u001b[43minputString\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mkeys[i]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m, values[i])\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m inputString\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'replace'"
+     ]
     }
    ],
    "source": [
-    "judge.evaluateTaxonomical(problem, code)"
+    "judge.evaluateBinary(problem, code)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
