Java Compiler based prompting test

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        " 'example_test': 'def check(has_close_elements):\\n    assert has_close_elements([1.0, 2.0, 3.0], 0.5) == False\\n    assert has_close_elements([1.0, 2.8, 3.0, 4.0, 5.0, 2.0], 0.3) == True\\ncheck(has_close_elements)\\n'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,14 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using CodeJudge Version: CodeJudge 2025.0.alpha\n"
+     "ename": "NameError",
+     "evalue": "name 'codejudge' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m judge \u001b[38;5;241m=\u001b[39m \u001b[43mcodejudge\u001b[49m\u001b[38;5;241m.\u001b[39mCodeJudge(promptLocation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./CodeJudge/prompts.json\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'codejudge' is not defined"
      ]
     }
    ],
@@ -195,22 +199,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'replace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjudge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevaluateBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:69\u001b[0m, in \u001b[0;36mCodeJudge.evaluateBinary\u001b[1;34m(self, problem, code, referenceCode)\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mevaluateBinary\u001b[39m(\u001b[38;5;28mself\u001b[39m, problem:\u001b[38;5;28mstr\u001b[39m, code:\u001b[38;5;28mstr\u001b[39m, referenceCode:\u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m---> 69\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getLLMResponseBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:38\u001b[0m, in \u001b[0;36mCodeJudge._getLLMResponseBinary\u001b[1;34m(self, problem, code)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_getLLMResponseBinary\u001b[39m(\u001b[38;5;28mself\u001b[39m, problem: \u001b[38;5;28mstr\u001b[39m, code: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n\u001b[0;32m     37\u001b[0m     prompts \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loadBinaryEvaluationPrompts()\n\u001b[1;32m---> 38\u001b[0m     stageOnePrompt \u001b[38;5;241m=\u001b[39m \u001b[43mreplaceKeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprompts\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPROBLEM\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCODE\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mproblem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcode\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m     stageOneResponse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mllm\u001b[38;5;241m.\u001b[39minvoke(stageOnePrompt)\u001b[38;5;241m.\u001b[39mcontent\n\u001b[0;32m     41\u001b[0m     stageTwoPrompt \u001b[38;5;241m=\u001b[39m replaceKeys(prompts[\u001b[38;5;241m1\u001b[39m], [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMISTAKE\u001b[39m\u001b[38;5;124m\"\u001b[39m], [stageOneResponse])\n",
-      "File \u001b[1;32mc:\\Users\\adity\\Desktop\\Thesis\\CodeJudge\\codejudge.py:12\u001b[0m, in \u001b[0;36mreplaceKeys\u001b[1;34m(inputString, keys, values)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of keys and values should be the same\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(keys)):\n\u001b[1;32m---> 12\u001b[0m     inputString \u001b[38;5;241m=\u001b[39m \u001b[43minputString\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreplace\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mkeys[i]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m, values[i])\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m inputString\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'replace'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the provided code for correctness and functionality based on the criteria you've outlined.\n",
+      "\n",
+      "### 1. Logical Correctness\n",
+      "The function `has_close_elements` is designed to check if there are any two numbers in the list `numbers` that are closer to each other than a specified `threshold`. The logic implemented in the nested loops correctly checks each pair of elements in the list. \n",
+      "\n",
+      "- The outer loop iterates through each element (`elem`), and the inner loop iterates through each element again (`elem2`).\n",
+      "- The condition `if idx != idx2` ensures that the same element is not compared to itself.\n",
+      "- The distance between the two elements is calculated using `abs(elem - elem2)`, and if this distance is less than the `threshold`, the function returns `True`.\n",
+      "- If no such pair is found after checking all combinations, the function returns `False`.\n",
+      "\n",
+      "### 2. Algorithm Implementation\n",
+      "The algorithm is implemented correctly, but it is not efficient. The time complexity of this implementation is O(n^2) due to the nested loops, where n is the number of elements in the list. This can be problematic for large lists, as it may lead to performance issues.\n",
+      "\n",
+      "A more efficient approach could involve sorting the list first and then checking adjacent elements, which would reduce the time complexity to O(n log n) for sorting and O(n) for the subsequent check, resulting in an overall complexity of O(n log n).\n",
+      "\n",
+      "### 3. Edge Case Handling\n",
+      "The function does not explicitly handle some edge cases:\n",
+      "\n",
+      "- **Empty List**: If `numbers` is an empty list, the function will return `False`, which is correct since there are no elements to compare.\n",
+      "- **Single Element List**: If `numbers` contains only one element, the function will also return `False`, which is correct for the same reason.\n",
+      "- **Negative Threshold**: If the `threshold` is negative, the function will always return `False` since distances (absolute differences) cannot be negative. This behavior is not explicitly handled, and it might be worth adding a check to return `False` immediately if the threshold is negative.\n",
+      "- **Identical Elements**: If the list contains identical elements, the function will return `True` if the threshold is zero or less, which is correct. However, if the threshold is positive, it will return `True` for any identical elements.\n",
+      "\n",
+      "### Suggested Improvements\n",
+      "1. **Efficiency**: Consider using a sorting approach to improve performance.\n",
+      "2. **Threshold Check**: Add a check for negative thresholds to handle that case explicitly.\n",
+      "3. **Documentation**: The docstring could be expanded to include information about edge cases and expected behavior with negative thresholds.\n",
+      "\n",
+      "### Revised Code Example\n",
+      "Here’s a revised version of the function that incorporates some of these suggestions:\n",
+      "\n",
+      "```python\n",
+      "from typing import List\n",
+      "\n",
+      "def has_close_elements(numbers: List[float], threshold: float) -> bool:\n",
+      "    \"\"\" Check if in given list of numbers, are any two numbers closer to each other than\n",
+      "    given threshold.\n",
+      "    \n",
+      "    >>> has_close_elements([1.0, 2.0, 3.0], 0.5)\n",
+      "    False\n",
+      "    >>> has_close_elements([1.0, 2.8, 3.0, 4.0, 5.0, 2.0], 0.3)\n",
+      "    True\n",
+      "    >>> has_close_elements([], 0.5)\n",
+      "    False\n",
+      "    >>> has_close_elements([1.0], 0.5)\n",
+      "    False\n",
+      "    >>> has_close_elements([1.0, 1.0], 0.0)\n",
+      "    True\n",
+      "    >>> has_close_elements([1.0, 2.0], -0.1)\n",
+      "    False\n",
+      "    \"\"\"\n",
+      "    if threshold < 0:\n",
+      "        return False\n",
+      "\n",
+      "    numbers.sort()\n",
+      "    for i in range(len(numbers) - 1):\n",
+      "        if abs(numbers[i] - numbers[i + 1]) < threshold:\n",
+      "            return True\n",
+      "\n",
+      "    return False\n",
+      "```\n",
+      "\n",
+      "This revised version improves efficiency and handles edge cases more explicitly.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'No'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
